--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,29 @@ body{
 }
 .calculator{
     display: flex;
-    border-style: solid;
+   
     flex-direction: column;
+ 
+}
+.display{
+    border-style: solid;
+    border-width: 2px;
+    border-bottom-width: 2px;
+    border-color: black;
+   
+}
+.calculatorInputs{
+    display: flex;
+    justify-content: flex-end;
+    margin:6px 10px;
+    
+}
+
+.calculatorBottom{
+    border-style: solid;
+    border-width: 2px;
+ border-color: grey;
+ border-top-width: 0px;
 }
 .column{
     display: flex;
